@@ -21,6 +21,7 @@ Versionsänderungen:
 ####Version 2.3.0:    
 - Alphabetische Sortierung der Kategorienausgabe nach Nachname (bzw. bei Einrichtungen nach Bezeichnungsfeld) über Parameter sort="nachname"         
 - Berücksichtigung der Felder "Nachname" und "Bezeichnung" bei Sortierung der Auswahlliste    
+- Bugfix bei Anzeige des Raumes und des Bildes in der Sidebar über die Metabox "Ansprechpartner"    
 
 ####Version 2.2.0:    
 - Standard-Kontakt-Übersichtsseite kann mit einer eigens gestaltbaren Seite überschrieben werden, diese muss den Slug "person" haben        
